BD + Calculo de calificaciones por alumno
Falta guardar las notas en la BD

--- a/Administracion/viewCalif.html
+++ b/Administracion/viewCalif.html
@@ -66,11 +66,11 @@
 							</tr>
 							<tr>
 								<td class="tam">ASIGNATURA:</td>
-								<td><input type="text"></td>
+								<td><input type="text" id="asig"></td>
 							</tr>
 							<tr>
 								<td class="tam">PROFESOR:</td>
-								<td><input type="text"></td>
+								<td><input type="text" id="nomPro"></td>
 							</tr>
 							<tr>
 								<td class="tam">AÑO ESCOLAR:</td>
@@ -151,88 +151,147 @@
 						<td><input type="text" id="califP4"class="inputOtroClass" placeholder="calif"></td>
 						<td><input type="text" id="porcP4"class="inputOtroClass" placeholder="%"></td>
 						<td><input type="text" id="califP5"class="inputOtroClass" placeholder="calif"></td>
+						<td><input type="text" id="porcP5"class="inputOtroClass" placeholder="%"></td>
+						<td><input type="text" id="califP6"class="inputOtroClass" placeholder="calif"></td>
 						<td><input type="text" id="porcP6"class="inputOtroClass" placeholder="%"></td>
-						<td><input type="text" id="califP7"class="inputOtroClass" placeholder="calif"></td>
-						<td><input type="text" id="porcP7"class="inputOtroClass" placeholder="%"></td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
-					<tr class="modif">
+				<!--	<tr class="modif">
 						<td class="centrar">01</td>
 						<td>SALAZAR INAGA, LUINDER JESUS</td>
-						<td class="centrar"><input class="inputOtroClass calif1"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa1"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc1"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif2"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa2"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc2"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif3"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa3"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc3"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif4"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa4"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc4"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif5"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa5"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc5"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif6"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa6"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc6"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass tot71"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass pLapso"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass tot30"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass masPt"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass totF"type="text"></td>
 					</tr>
 
 					<tr>
 						<td class="centrar">02</td>
 						<td>PEREZ APONTE, DENGER JESUS</td>
-						<td class="centrar"><input class="inputOtroClass calif1"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa1"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc1"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif2"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa2"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc2"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif3"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa3"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc3"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif4"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa4"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc4"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif5"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa5"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc5"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif6"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa6"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc6"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass tot71"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass pLapso"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass tot30"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass masPt"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass totF"type="text"></td>
 					</tr>
 
 					<tr>
 						<td class="centrar">03</td>
 						<td>CABRERA GONZALEZ, EDWARD</td>
-						<td class="centrar"><input class="inputOtroClass calif1"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa1"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc1"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif2"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa2"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc2"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif3"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa3"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc3"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif4"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa4"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc4"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif5"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa5"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc5"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass calif6"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass valid califa6"type="text"></td>
 						<td class="centrar"><input class="inputOtroClass porc6"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-						<td class="centrar"><input class="inputOtroClass"type="text"></td>
-					</tr>
+						<td class="centrar"><input class="inputOtroClass tot71"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass pLapso"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass tot30"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass masPt"type="text"></td>
+						<td class="centrar"><input class="inputOtroClass totF"type="text"></td>
+					</tr>-->
 				</table>	
+
+				<div id="msjss" class="centrar">
+						<div class="alert alert-danger">Nota no valida por favor corrija
+						</div>
+				</div>
 				<div class="centrar">
 					<button id="modif" class="butM">Modificar</button>
 					<button id="guar"  class="butM">Guardar</button>
 					<button id="calc"  class="butM">Calcular</button>
  				</div>
-			</article>
 
+			</article>
+			<table id="Toculta" >	
+				<thead>
+					<td>Nota F1</td>
+					<td>Nota F2</td>
+					<td>Nota F3</td>
+					<td>Nota F4</td>
+					<td>Nota F5</td>
+					<td>Nota F6</td>
+					<td>Total suma<td>
+					<td>70%</td>
+					<td>30%</td>
+					<td>Final</td>
+				</thead>
+				<tbody>
+				<!--	<tr class="col">
+						<td class="centrar"><input class="inputOtroClass esc rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc2 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc3 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc4 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc5 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc6 rows"></td>
+						<td class="centrar"><input class="inputOtroClass tot"></td>
+						<td class="centrar"><input class="inputOtroClass tot7"></td>
+						<td class="centrar"><input class="inputOtroClass tot32"></td>
+						<td class="centrar"><input class="inputOtroClass totF2"></td>
+					</tr>
+					<tr class="col">
+						<td class="centrar"><input class="inputOtroClass esc rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc2 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc3 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc4 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc5 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc6 rows"></td>
+						<td class="centrar"><input class="inputOtroClass tot"></td>
+						<td class="centrar"><input class="inputOtroClass tot7"></td>
+						<td class="centrar"><input class="inputOtroClass tot32"></td>
+						<td class="centrar"><input class="inputOtroClass totF2"></td>
+					</tr>
+					<tr class="col">
+						<td class="centrar"><input class="inputOtroClass esc rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc2 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc3 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc4 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc5 rows"></td>
+						<td class="centrar"><input class="inputOtroClass esc6 rows"></td>
+						<td class="centrar"><input class="inputOtroClass tot"></td>
+						<td class="centrar"><input class="inputOtroClass tot7"></td>
+						<td class="centrar"><input class="inputOtroClass tot32"></td>
+						<td class="centrar"><input class="inputOtroClass totF2"></td>
+					</tr>
+	-->
+				</tbody>
+
+			</table>
 		</div>
 	</section>
 
