--- a/Administracion/inscripcion.html
+++ b/Administracion/inscripcion.html
@@ -15,7 +15,6 @@
 	<script src="../js/script.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
-	<script src="../js/datos_constancia.js"></script>
 	<script src="../js/jsoninscripcion.js"></script>
 	<script src="../js/jquery.validate.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
@@ -195,7 +194,9 @@
 									<input type="text" class="form-control" name="phone2" value="" placeholder="Celular">
 								
 								</label>
-								<label class="movit"> Año a Cursar
+								<label class="movit"> Email Alumno
+									<input type="text"  class="form-control" name="email" value="" placeholder="ej:alumno@dominio.com">
+								</label>								<label class="movit"> Año a Cursar
 									<input type="text"  class="form-control" name="year" value="" placeholder="ej:2014">
 								</label>
 								<label class="movit"> Plantel de Procedencia
@@ -257,7 +258,10 @@
 									<input type="text" class="form-control" name="profesion" value="" placeholder="Profesion" onkeypress="return soloLetras(event)">
 								</label>
 								<label class="movit" > Empresa o Lugar de Trabajo
-									<input type="text" class="form-control" name="whereWork" value="" placeholder="Lugar de Nacimiento" onkeypress="return soloLetras(event)">
+									<input type="text" class ="form-control" name="whereWork" value="" placeholder="Lugar de Nacimiento" onkeypress="return soloLetras(event)">
+								</label>
+								<label class="movit"> Email Padre
+									<input type="text"  class="form-control" name="emailPadre" value="" placeholder="ej:alumno@dominio.com">
 								</label>
 								<label class="movit"> Telefonos
 									<input type="text"  class="form-control" name="phone3" value="" placeholder="Casa">
@@ -286,6 +290,9 @@
 								</label>
 								<label class="movit" > Empresa o Lugar de Trabajo
 									<input type="text" class="form-control" name="whereWorkMother" value="" placeholder="Lugar de Trabajo">
+								</label>
+								<label class="movit"> Email Madre
+									<input type="text"  class="form-control" name="emailMadre" value="" placeholder="ej:alumno@dominio.com">
 								</label>
 								<label class="movit"> Telefonos
 									<input type="text"  class="form-control" name="phone5" value="" placeholder="Casa">
