--- a/Administracion/gestionInformacionAdministrativa.html
+++ b/Administracion/gestionInformacionAdministrativa.html
@@ -153,7 +153,7 @@
 						<li><a class="registroC iconoconsultarclass"></a><a class="textoAbajo" >Registro De Cancelación De Mensualidades</a></li>
 						<li><a class="informA iconomodificarclass"></a><a class="textoAbajo" >Información Administrativa</a></li>
 						<li><a class="controlM iconoconsultarclass"></a><a class="textoAbajo" >Control De Mensualidades</a></li>
-						<li><a class="reportesC iconomodificarclass"></a><a class="textoAbajo" >Reporte</a></li>
+						
 					</ul>					
 				</div>				
 			</article>
@@ -225,13 +225,134 @@
 
 			<article id="noticias" class="informaAdm">
 				<header><h3>Información Administrativa - Consultar</h3></header>
-				<div>a</div>
+				<div class="centrar buscQ">
+					<br>
+					<label>Ingrese Cedula</label>
+					<input type="text" id="cedulaBusc">
+					<input type="Button"  id="BuscarConsulta" value="Buscar"> 
+				</div>
+				<div class="tablasAdministrativa"> 
+					<table class="centrar tablaMeses">
+						<tr>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Septiembre</legend>
+								<label>Reinscripcion</label>
+								<label>Mensaualidad Bs. <span id="mes1">1500</span></label>
+								<label>Numero de Recibo <span id="recibo1">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Diciembre</legend>
+								<label>&nbsp;</label>
+								<label>Mensaualidad Bs. <span id="mes1">1500</span></label>
+								<label>Numero de Recibo <span id="recibo1">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Marzo</legend>
+								<label>Reinscripcion</label>
+								<label>Mensaualidad Bs. <span id="mes1">1500</span></label>
+								<label>Numero de Recibo <span id="recibo1">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Junio</legend>
+								<label>&nbsp;</label>
+								<label>Mensaualidad Bs. <span id="mes1">1500</span></label>
+								<label>Numero de Recibo <span id="recibo1">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+						</tr>
+						<tr class="mesesFieldset">
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Octubre</legend>
+								<label>Mensaualidad Bs. <span id="mes2">1500</span></label>
+								<label>Numero de Recibo <span id="recibo2">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Enero</legend>
+								<label>Mensaualidad Bs. <span id="mes2">1500</span></label>
+								<label>Numero de Recibo <span id="recibo2">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Abril</legend>
+								<label>Mensaualidad Bs. <span id="mes2">1500</span></label>
+								<label>Numero de Recibo <span id="recibo2">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Julio</legend>
+								<label>Mensaualidad Bs. <span id="mes2">1500</span></label>
+								<label>Numero de Recibo <span id="recibo2">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+						</tr>
+						<tr class="mesesFieldset">
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Noviembre</legend>
+								<label>Mensaualidad Bs. <span id="mes3">1500</span></label>
+								<label>Numero de Recibo <span id="recibo3">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Febrero</legend>
+								<label>Mensaualidad Bs. <span id="mes3">1500</span></label>
+								<label>Numero de Recibo <span id="recibo3">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Mayo</legend>
+								<label>Mensaualidad Bs. <span id="mes3">1500</span></label>
+								<label>Numero de Recibo <span id="recibo3">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+							<td class="mesesFieldset">
+								<fieldset>
+								<legend>Agosto</legend>
+								<label>Mensaualidad Bs. <span id="mes3">1500</span></label>
+								<label>Numero de Recibo <span id="recibo3">13910</span></label>
+								<label>fecha <span id="fecha1">13/10/2014</span></label>
+								</fieldset>
+							</td>
+						</tr>
+						
+					</table>
+					<div id="atr" class="atras2">
+						<a id="atras" name="1"></a>
+						<a id="at" name="1">Atrás</a>
+					</div>
+				</div>
 			</article>
 			<article id="noticias" class="mensControl">
 				<header><h3>Control De Mensualidades</h3></header>
 				<div class="formulario-InA">
 					<label>Buscar Por:</label>
 					<select id="tipoBusc">
+						<option value="a">-----</option>
 						<option value="0">Alumno</option>
 						<option value="1">Mes</option>
 						<option value="2">Todos</option>
