--- a/Administracion/responderSolicitudRespondida.html
+++ b/Administracion/responderSolicitudRespondida.html
@@ -182,7 +182,7 @@
 				</div>
 				<br>
 				<div class="centrar">	
-					<input type="button" value="Responder Solicitud" id="responderSolic">
+					<input type="button" value="Modificar Respuesta a la Solicitud" id="responderSolic">
 				</div>	
 
 				</section>	
