Pagina Gestion Listado - Ingresar

--- a/Administracion/gestion.html
+++ b/Administracion/gestion.html
@@ -149,7 +149,7 @@
 				<div id="contenidoNoticias">
 					<ul id="listaGestion">
 						<li><a id="bloque" href="#"></a><a class="textoAbajo" href="#">Gestión De Fechas De Evaluaciones</a></li>
-						<li><a id="bloque2" href="#"></a><a class="textoAbajo" href="#">Gestión De Listados</a></li>
+						<li><a id="bloque2" href="gestionListados.html"></a><a class="textoAbajo" href="gestionListados.html">Gestión De Listados</a></li>
 						<li><a id="bloque3" href="gestionInformacionAdministrativa.html"></a><a class="textoAbajo" href="gestionInformacionAdministrativa.html">Gestión De Información Administrativa</a></li>
 						<li><a id="bloque4" href="gestionDeLibros.html"></a><a class="textoAbajo" href="gestionDeLibros.html">Gestión De Libros</a></li>
 						<li><a id="bloque5" href="gestionInformacionEstudiantil.html"></a><a class="textoAbajo" href="gestionInformacionEstudiantil.html">Gestión De Información Estudiantil</a></li>
