validaciones calificaciones pt1

--- a/Administracion/viewCalif.html
+++ b/Administracion/viewCalif.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+	<!--<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>-->
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
@@ -229,6 +229,14 @@
 
 				<div id="msjss" class="centrar">
 						<div class="alert alert-danger">Nota no valida por favor corrija
+						</div>
+				</div>
+				<div id="msjss2" class="centrar">
+						<div class="alert alert-danger">La suma de los porcentajes no puede ser mayor, ni menor a 100%
+						</div>
+				</div>
+				<div id="msjss3" class="centrar">
+						<div class="alert alert-danger">No pueden haber porcentajes en blanco
 						</div>
 				</div>
 				<div class="centrar">
