Diseño Completo Gestion Listado

--- a/Administracion/gestionListados.html
+++ b/Administracion/gestionListados.html
@@ -360,6 +360,119 @@
 					<a id="at">Atrás</a>
 				</div>
 			</article>
+			<article id="noticias">
+				<header class="titulo"><h3>Consultar</h3></header>
+				<div class="formularios listaFFF">
+					<table id="tabGL">
+						<tbody>
+							<tr>
+								<td class="right">
+								<label>Seleccionar Lista</label>
+								</td>
+								<td>
+									<select class="espLeft">
+										<option>---------------</option>
+										<option>Materia Pendiente 1</option>
+										<option>Materia Pendiente 2</option>
+										<option>Aula De Clase 7mo</option>
+										<option>Todas</option>
+									</select>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<table class="centrar">					
+					<thead>
+						<tr>
+							<th>N°</th>
+							<th>NOMBRE DE LA LISTA</th>
+							<th>GRADO</th>
+							<th>FECHA DE CREACIÓN</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>01</td>
+							<td>Lista 1</td>
+							<td>------</td>
+							<td>17-05-2013</td>
+							<td><a href="#">>></a></td>
+						</tr>
+						<tr>
+							<td>02</td>
+							<td>Lista 2 Lista 2</td>
+							<td>1er Año</td>
+							<td>20-02-2013</td>
+							<td><a href="#">>></a></td>
+						</tr>
+					</tbody>
+				</table>
+
+				<table class="centrar tamaTable">					
+					<thead>
+						<tr>
+							<th>N°</th>
+							<th>APELLIDOS Y NOMBRES</th>
+							<th>SEXO</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>01</td>
+							<td>Salinas Zambrano, Cindy Yarimar</td>
+							<td>F</td>
+							<td><a href="#">Eliminar</a></td>
+						</tr>
+						<tr>
+							<td>02</td>
+							<td>Abrante, Manuel</td>
+							<td>M</td>
+							<td><a href="#">Eliminar</a></td>
+						</tr>
+						<tr>
+							<td>03</td>
+							<td>Salinas Zambrano, Keily Yoselin</td>
+							<td>F</td>
+							<td><a href="#">Eliminar</a></td>
+						</tr>
+					</tbody>
+				</table>
+				<div id="atrasGL10" class="atras2 atr centrar">
+					<a id="atras"></a>
+					<a id="at">Atrás</a>
+				</div>
+			</article>
+			<article id="noticias">
+				<header class="titulo"><h3>Eliminar</h3></header>
+				<div class="formularios listaFFF">
+					<table id="tabGL">
+						<tbody>
+							<tr>
+								<td class="right">
+								<label>Seleccionar Lista</label>
+								</td>
+								<td>
+									<select class="espLeft">
+										<option>---------------</option>
+										<option>Materia Pendiente 1</option>
+										<option>Materia Pendiente 2</option>
+										<option>Aula De Clase 7mo</option>
+										<option>Todas</option>
+									</select>
+								</td>
+							</tr>
+							<tr >
+								<td colspan="2" class="centrar">
+									<button class="topBB">Eliminar</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</article>
 		</div>
 	</section>
 
