arreglo bug botones

--- a/Administracion/gestionDeLibros.html
+++ b/Administracion/gestionDeLibros.html
@@ -314,7 +314,7 @@
 							<label class="labelGestionLibro" id="autor" name="nombreAutor">Autor: </label>
 							<input disabled type="text" id="aut2" placeholder="Ej.: Libro 1" name="nombreAutor">
 							<label class="labelGestionLibro" id="autor" name="nombreAutor">Año: </label>
-							<input disabled type="text" id="year2" placeholder="Ej.: Libro 1" name="nombreAutor">
+							<input disabled type="text" id="years2" placeholder="Ej.: Libro 1" name="nombreAutor">
 							<label class="labelGestionLibro" id="autor" name="nombreAutor">Fecha De Salida: </label>
 							<input  id="fechaS" type="date" placeholder="Ej.: Libro 1" name="nombreAutor">		
 							<label class="labelGestionLibro" id="autor" name="nombreAutor">Fecha De Entrega: </label>
