Gestion Calendario Escolar Listoo!

--- a/Administracion/gestionCalendarioEscolar.html
+++ b/Administracion/gestionCalendarioEscolar.html
@@ -429,7 +429,8 @@
 					</tr>
 				</table>
 				<div class="centrar">
-					<a id="linkBuscarModCE" class="centrar butEventClass" >Buscar</a>
+					<a id="linkBuscarModCE" class="butEventClass" >Buscar</a>
+					<a id="linkEliminarModCE" class="butEventClass" >Eliminar</a>
 				</div>
 			</div>
 
@@ -650,7 +651,8 @@
 						</tr>
 					</table>
 					<div class="centrar">
-						<a id="linkBuscarActEven" class="centrar butEventClass">Buscar</a>
+						<a id="linkBuscarActEven" class="butEventClass">Buscar</a>
+						<a id="linkEliminarActEven" class="butEventClass">Eliminar</a>
 					</div>
 				</div>
 
