Gestion libros - boton atras

--- a/Administracion/gestionDeLibros.html
+++ b/Administracion/gestionDeLibros.html
@@ -150,8 +150,8 @@
 				<header class="titulo"><h3>Seleccionar Una Opción</h3></header>
 			<!--	<div id="contenidoNoticias" class="estiloGestionLibros">-->
 					<ul id="listaGestion" class="listaPrincipal ocultarXClick">
-						<li><a id="iconoconsultar" ></a><a class="textoAbajo" >Registro De Libros</a></li>
-						<li><a id="iconomodificar" ></a><a class="textoAbajo" >Registro De Prestamos De Libros</a></li>
+						<li><a id="iconoconsultar" ></a><a class="textoAbajo iconoconsultar" >Registro De Libros</a></li>
+						<li><a id="iconomodificar" ></a><a class="textoAbajo iconomodificar" >Registro De Prestamos De Libros</a></li>
 					</ul>					
 					<ul id="listaGestion" class="hideLista" name="1">
 						<li class="ingresar"><a id="iconoconsultar" title="ingresar"></a><a class="textoAbajo">Ingresar</a></li>
